Add Data backup and loading correction

--- a/Dare4CharFrontend/src/app/add-files/add-files.component.css
+++ b/Dare4CharFrontend/src/app/add-files/add-files.component.css
@@ -1,7 +1,3 @@
-.child {
-    width: 100%;
-    margin: auto;
-}
 .main {
     width: 70%;
     margin: auto;
@@ -9,8 +5,12 @@
     min-height: 300px;
     margin-bottom: 100px;
 }
+.child {
+    width: 100%;
+    margin: auto;
+}
 input {
-    width: 200px;
+    width: 100%;
 }
 .fullwidth {
     margin: 30px 0;
@@ -19,18 +19,6 @@ input {
 .mat-card-actions {
     text-align: center;
 }
-
-.mat-spinner {
-    position: fixed;
-    left: 45%;
-    top: 45%;
-}
-
-.loading {
-    background-color: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 0;
-    left: 0;
+.spinnerContainer {
     width: 100%;
-    min-height: 805px;
 }
