--- a/Dare4CharFrontend/src/app/add-files/add-files.component.html
+++ b/Dare4CharFrontend/src/app/add-files/add-files.component.html
@@ -1,5 +1,8 @@
-<mat-spinner *ngIf="isLoading"></mat-spinner>
-
+<app-loading-spinner
+    class="spinner"
+    *ngIf="isLoading"
+    message="loading..."
+></app-loading-spinner>
 <div>
     <mat-card class="main" [ngClass]="{ loading: isLoading }">
         <mat-card-content>
