--- a/Dare4CharFrontend/src/styles.css
+++ b/Dare4CharFrontend/src/styles.css
@@ -5,3 +5,49 @@ img {
     height: 300px;
     width: 200px;
 }
+
+/* .loading {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 805px;
+} */
+
+/* .spinner {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    overflow: hidden;
+} */
+input[text] {
+    height: auto;
+}
+
+.mat-spinner {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.message {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 700px) {
+    img {
+        height: 500px;
+        width: 400px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    img {
+        height: 500px;
+        width: 600px;
+    }
+}
