--- a/Dare4CharFrontend/src/app/add-files/add-files.component.html
+++ b/Dare4CharFrontend/src/app/add-files/add-files.component.html
@@ -1,10 +1,10 @@
 <ngx-spinner></ngx-spinner>
 <div>
-    <mat-card
-        class="main"
-        
-    >
+    <mat-card class="main" >
         <mat-card-content>
+
+            
+            <!-- Chip For select action -->
             <label for="chipList"><strong>Select action:</strong> </label>
             <mat-chip-list #chipList aria-label="Video keywords">
                 <div *ngFor="let keyword of keywords">
@@ -30,15 +30,17 @@
             <!-- Card of Image/video with swipe -->
             <mat-card *ngIf="maxIndex" class="child">
                 <mat-card-content>
+                    <mat-icon class="delete" (click)="onDelete()">dangerous</mat-icon>
                     <img src="{{ items[currIndex].url }}" (touchstart)="onTouch('start', $event)"
                     (touchend)="onTouch('end', $event)"
                     (mousedown)="onDrag('start', $event)"
                     (mouseup)="onDrag('end', $event)" /><br />
-                    <div style="text-align: center">
+                    <div style="text-align: center" *ngIf="maxIndex>1">
                         <span
                             class="dot"
                             *ngFor="let i of numSequence(maxIndex);index as j"
                             [ngClass]="{ 'filled': j == currIndex }"
+                            (click)="onDotClick(j)"
                         ></span>
                     </div>
                     <textarea
