post and status backend added and post model frontend implemented

--- a/Dare4CharFrontend/src/app/add-files/add-files.component.html
+++ b/Dare4CharFrontend/src/app/add-files/add-files.component.html
@@ -48,7 +48,7 @@
                         placeholder="caption {{ currIndex + 1 }}"
                         value="{{ items[currIndex].caption }}"
                     ></textarea>
-                    <mat-slide-toggle [(ngModel)]="autoCaption" (change)="onAutoCaption()">Fill this caption with empty captions! Slide Toggle Checked: {{autoCaption}}</mat-slide-toggle>
+                    <mat-slide-toggle [(ngModel)]="autoCaption" (change)="onAutoCaption()">Fill this caption with empty captions.</mat-slide-toggle>
                 </mat-card-content>
             </mat-card>
             <!-- Image uploader -->
