--- a/Dare4CharFrontend/src/app/home/post/post.component.html
+++ b/Dare4CharFrontend/src/app/home/post/post.component.html
@@ -1,1 +1,2 @@
-<app-post-model *ngFor="let post of posts" [post]="post"]></app-post-model>
+<p>From post!</p>
+<app-post-model *ngFor="let post of posts" [post]="post"></app-post-model>
