--- a/Dare4CharFrontend/src/styles.css
+++ b/Dare4CharFrontend/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+/* global */
 * {
     -webkit-user-drag: none;
     user-select: none;
@@ -8,6 +9,7 @@
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
 
 img {
     width: 100%;
@@ -19,6 +21,13 @@ textarea {
     padding: 10px;
 }
 
+p{
+    font-size: 20px;
+}
+
+
+
+/* Post and Status */
 .dot {
     height: 6px;
     width: 6px;
