Authentication frontend + backend

--- a/Dare4CharFrontend/src/app/app.component.html
+++ b/Dare4CharFrontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Toolbar -->
-<mat-toolbar *ngIf="userid && userid.length>0" class="toolbar" color="primary">
+<mat-toolbar *ngIf="isLogin()" class="toolbar" color="primary">
     <mat-toolbar-row>
         <button mat-icon-button (click)="onLogout()">
             <mat-icon>logout</mat-icon>Logout
@@ -8,7 +8,7 @@
 </mat-toolbar>
 
 <!-- Navigation bar -->
-<mat-toolbar *ngIf="userid && userid.length>0" class="navbar" color="primary">
+<mat-toolbar *ngIf="isLogin()" class="navbar" color="primary">
     <mat-toolbar-row>
         <button mat-icon-button routerLink="home">
             <mat-icon>home</mat-icon>
