--- a/Dare4CharFrontend/src/app/home/main/main.component.html
+++ b/Dare4CharFrontend/src/app/home/main/main.component.html
@@ -10,4 +10,4 @@
         <app-status></app-status>
     </mat-tab>
 </mat-tab-group>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
