--- a/Dare4CharFrontend/src/app/home/status/status.component.html
+++ b/Dare4CharFrontend/src/app/home/status/status.component.html
@@ -1,1 +1,2 @@
-<p>status works!</p>
+<p *ngIf="status.length==0" class="dummy">No status found :(<br> Please make friends to have more fun</p>
+<app-status-model></app-status-model>
