--- a/Dare4CharFrontend/src/app/home/status-model/status-model.component.html
+++ b/Dare4CharFrontend/src/app/home/status-model/status-model.component.html
@@ -1,4 +1,7 @@
-<mat-card>
+<mat-card  (touchstart)="onTouch('start', $event)"
+    (touchend)="onTouch('end', $event)"
+    (mousedown)="onDrag('start', $event)"
+    (mouseup)="onDrag('end', $event)" >
     <mat-card-header>
         <div mat-card-avatar [ngStyle]="{'background': '#000 url(' + 'https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.aLheDZLdeJFEEIzFFArg8wHaHa%26pid%3DApi&f=1' + ') no-repeat','background-size': 'cover'}"></div>
         <mat-card-title>Abilash</mat-card-title>
