--- a/Dare4CharFrontend/src/app/home/status/status.component.html
+++ b/Dare4CharFrontend/src/app/home/status/status.component.html
@@ -3,7 +3,8 @@
 <div class="container">
     <div *ngFor="let userstatus of statuses;index as i">
         <mat-card *ngIf="userstatus" class="status" (click)="onStatusShow(i)">
-            <div mat-card-avatar [ngStyle]="{'background': '#000 url(' + 'https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.aLheDZLdeJFEEIzFFArg8wHaHa%26pid%3DApi&f=1' + ') no-repeat','background-size': 'cover'}"></div>
+            <div mat-card-avatar 
+                [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
             <div>
                 <mat-card-title>{{ userstatus.user.username }}</mat-card-title>
                 <!-- <mat-card-subtitle>{{ getDate()) | date:'shortTime' }}</mat-card-subtitle>     -->
@@ -14,4 +15,5 @@
 
 <app-status-model *ngIf="show && currIndex>=0 && statuses.length>currIndex" 
     [userstatus]="statuses[currIndex]" 
-    (stop)="onStop()"></app-status-model>
+    (stop)="onStop($event)"
+    (next)="onNext($event)"></app-status-model>
