--- a/Dare4CharFrontend/src/app/home/status/status.component.css
+++ b/Dare4CharFrontend/src/app/home/status/status.component.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 550px;
+    max-width: 500px;
     margin: auto;
+    padding: 0;
 }
 .status{
     display: flex;
     flex-direction: row;
-    
+    width: 100%;
+    margin: 0;
 }
