--- a/Dare4CharFrontend/src/app/home/post-model/post-model.component.css
+++ b/Dare4CharFrontend/src/app/home/post-model/post-model.component.css
@@ -17,3 +17,13 @@
     justify-content: space-between;
 }
 
+button{
+    margin: 0;
+    padding: 0;
+    text-align: right;
+}
+.menuicon{
+    margin: 0;
+    padding: 0;
+    text-align: right;
+}
