backend delete api for post and status

--- a/Dare4CharFrontend/src/styles.css
+++ b/Dare4CharFrontend/src/styles.css
@@ -58,6 +58,16 @@ p{
     text-align: center;
 }
 
+
+/* menu */
+
+.spacer{
+    flex: 1 1 auto;
+}
+
+
+
+
 @media screen and (min-width: 500px) {
     .mat-tab-body-wrapper{
         width: 100%;
