--- a/Dare4CharFrontend/src/app/home/post-model/post-model.component.css
+++ b/Dare4CharFrontend/src/app/home/post-model/post-model.component.css
@@ -3,6 +3,14 @@
     margin-right: 20px;
 }
 
+.mat-card-title{
+    display: contents;
+    margin: 5px;
+}
+.mat-card-subtitle{
+    margin: 0;
+}
+
 .icons{
     display: flex;
     flex-direction: row;
@@ -26,4 +34,7 @@ button{
     margin: 0;
     padding: 0;
     text-align: right;
+}
+.menuitem{
+    text-align: center;
 }
