--- a/Dare4CharFrontend/src/app/home/post-model/post-model.component.html
+++ b/Dare4CharFrontend/src/app/home/post-model/post-model.component.html
@@ -3,13 +3,14 @@
     <mat-card-header>
         <div *ngIf="postOwner" mat-card-avatar [ngStyle]="{'background': '#fff url(' + getProfileUrl() + ') no-repeat','background-size': 'cover'}"></div>
         <mat-card-title *ngIf="postOwner">{{ postOwner.username }}</mat-card-title>
+        <mat-card-subtitle>{{ getDateInString() }}</mat-card-subtitle>
         <span class="spacer"></span>
         <!-- post menu -->
         <button class="menu" mat-button [matMenuTriggerFor]="postmenu"><mat-icon class="menuicon">more_vert</mat-icon></button>
 
         <mat-menu #postmenu="matMenu">
-            <button mat-menu-item>delete</button>
-            <button mat-menu-item>report</button>
+            <button mat-menu-item (click)="onDelete()" class="menuitem">delete</button>
+            <button mat-menu-item class="menuitem">report</button>
         </mat-menu>
         
     </mat-card-header>
