--- a/Dare4CharFrontend/src/styles.css
+++ b/Dare4CharFrontend/src/styles.css
@@ -75,4 +75,9 @@ p{
         overflow: auto;
         margin: 100px auto;
     }
+    img {
+        width: 100%;
+        height: 300px;
+    }
+    
 }
