profile and post in profile

--- a/Dare4CharFrontend/src/app/app.component.html
+++ b/Dare4CharFrontend/src/app/app.component.html
@@ -22,7 +22,7 @@
         <button mat-icon-button routerLink="notifications">
             <mat-icon>notifications</mat-icon>
         </button>
-        <button mat-icon-button roterLink="profile">
+        <button mat-icon-button routerLink="profile">
             <mat-icon>person</mat-icon>
         </button>
     </mat-toolbar-row>
